; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_term.c_scroll_start.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_term.c_scroll_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@T_VS = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8
@T_VE = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scroll_start() #0 {
  %1 = load i64*, i64** @T_VS, align 8
  %2 = load i64, i64* %1, align 8
  %3 = load i64, i64* @NUL, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i64*, i64** @T_VS, align 8
  %7 = call i32 @out_str(i64* %6)
  %8 = load i64*, i64** @T_VE, align 8
  %9 = call i32 @out_str(i64* %8)
  %10 = call i32 (...) @screen_start()
  br label %11

11:                                               ; preds = %5, %0
  ret void
}

declare dso_local i32 @out_str(i64*) #1

declare dso_local i32 @screen_start(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
